--- a/md5password.ipynb
+++ b/md5password.ipynb
@@ -3,13 +3,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.172054Z",
-     "start_time": "2024-12-10T14:01:11.154820Z"
+     "end_time": "2024-12-10T14:24:39.512107Z",
+     "start_time": "2024-12-10T14:24:39.495103Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import hashlib\n",
+    "\n",
     "\n",
     "def md5_min_js(str_passwd, str_ver):\n",
     "    def md5_rotate_left(l_value, i_shift_bits):\n",
@@ -182,21 +183,22 @@
     "    # 如果 盐 = 1.8 那么正常处理，如果 盐 != 1.8 那么加上 {Urp602019}\n",
     "\n",
     "    return hex_md5(str_passwd, str_ver)\n",
+    "\n",
     "password = '0'"
    ],
    "id": "cd3ba4243e3da21e",
    "outputs": [],
-   "execution_count": 208
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.181390Z",
-     "start_time": "2024-12-10T14:01:11.178063Z"
+     "end_time": "2024-12-10T14:24:39.522674Z",
+     "start_time": "2024-12-10T14:24:39.516441Z"
     }
    },
    "cell_type": "code",
-   "source": "print(password)",
+   "source": "print(password) # 原始密码",
    "id": "2210faf7f704b960",
    "outputs": [
     {
@@ -207,17 +209,20 @@
      ]
     }
    ],
-   "execution_count": 209
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.201132Z",
-     "start_time": "2024-12-10T14:01:11.197667Z"
+     "end_time": "2024-12-10T14:24:39.617344Z",
+     "start_time": "2024-12-10T14:24:39.613181Z"
     }
    },
    "cell_type": "code",
-   "source": "print(md5_min_js(password, ''))",
+   "source": [
+    "print(md5_min_js(password, ''))\n",
+    "# 经过 md5_min_js 加密后的密码"
+   ],
    "id": "385e8dafacee37f1",
    "outputs": [
     {
@@ -228,17 +233,20 @@
      ]
     }
    ],
-   "execution_count": 210
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.250614Z",
-     "start_time": "2024-12-10T14:01:11.247174Z"
+     "end_time": "2024-12-10T14:24:39.718710Z",
+     "start_time": "2024-12-10T14:24:39.715424Z"
     }
    },
    "cell_type": "code",
-   "source": "print(md5_min_js(password, '1.8'))",
+   "source": [
+    "print(md5_min_js(password, '1.8'))\n",
+    "# 加盐 1.8 经过 md5_min_js 加密后的密码"
+   ],
    "id": "8ec05c7744e4d499",
    "outputs": [
     {
@@ -249,17 +257,20 @@
      ]
     }
    ],
-   "execution_count": 211
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.300617Z",
-     "start_time": "2024-12-10T14:01:11.297242Z"
+     "end_time": "2024-12-10T14:24:39.766399Z",
+     "start_time": "2024-12-10T14:24:39.762909Z"
     }
    },
    "cell_type": "code",
-   "source": "print(hashlib.md5(password.encode(\"utf-8\")).hexdigest())",
+   "source": [
+    "print(hashlib.md5(password.encode(\"utf-8\")).hexdigest())\n",
+    "# python 原生加密"
+   ],
    "id": "63ac02e82971a03f",
    "outputs": [
     {
@@ -270,17 +281,20 @@
      ]
     }
    ],
-   "execution_count": 212
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T14:01:11.339592Z",
-     "start_time": "2024-12-10T14:01:11.336146Z"
+     "end_time": "2024-12-10T14:24:39.814318Z",
+     "start_time": "2024-12-10T14:24:39.810231Z"
     }
    },
    "cell_type": "code",
-   "source": "print(hashlib.md5((password+\"{Urp602019}\").encode(\"utf-8\")).hexdigest())",
+   "source": [
+    "print(hashlib.md5((password+\"{Urp602019}\").encode(\"utf-8\")).hexdigest())\n",
+    "# 加盐 {Urp602019} 再使用 python 原生加密"
+   ],
    "id": "9a37180e4b8d2646",
    "outputs": [
     {
@@ -291,7 +305,7 @@
      ]
     }
    ],
-   "execution_count": 213
+   "execution_count": 6
   }
  ],
  "metadata": {
